[gd_scene load_steps=4 format=3 uid="uid://doixoh75hajk2"]

[ext_resource type="Script" path="res://Cannon.gd" id="1_5k58b"]
[ext_resource type="Texture2D" uid="uid://dm301shqk4u6j" path="res://Cannon.png" id="2_coq7m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j58au"]
radius = 17.0

[node name="Cannon" type="Node2D"]
script = ExtResource("1_5k58b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_coq7m")

[node name="NoPlace" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.552941, 0, 0, 1)
texture_filter = 1
texture = ExtResource("2_coq7m")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.07

[node name="CannonArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CannonArea"]
shape = SubResource("CircleShape2D_j58au")
debug_color = Color(0.658824, 0.380392, 0.882353, 0.419608)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="CannonArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CannonArea" to="." method="_on_cannon_area_area_exited"]
